# pyGenomeTracks

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README_newTRACKS.md  all_default_properties.txt  all_possible_properties.txt  azure-pipelines.yml  environment.yml  evaluateCoverage.sh  pyproject.toml  requirements.txt  requirements_CI.txt  requirements_azure.txt  requirements_travis.txt  setup.py  temp.yml  test_locally.sh
.github/: ISSUE_TEMPLATE.md
docs/: Creating_new_tracks.md  conf.py  index.rst  requirements.txt
docs/content/: adding-new-tracks.rst  all_default_properties.csv  all_default_properties.txt  all_default_properties_rst.txt  all_possible_properties.txt  all_tracks.rst  citation.rst  examples.rst  faq.rst  installation.rst  possible-parameters.rst  releases.rst  usage.rst
examples/: BedMatrixExampleTrack.py  BedMatrixTrackExample.py  bedgraph_matrix.ini  bedgraph_matrix_lines.ini  bigwig.bw  bigwig_track.ini  bigwig_with_genes.ini  bigwig_with_genes_and_vlines.ini  domains.bed  epilog.qcat.bgz  epilog.qcat.bgz.tbi  epilog_cats.json  epilogos_track.ini  epilogos_track2.ini  fasta_track.bed  fasta_track.fasta  fasta_tracks.ini  generateAllOutput.sh  helloWorldTrack.py  hic_data.h5  hic_track.ini  new_track.ini
pygenometracks/: __init__.py  _version.py  fromGtfToBed12.py  getAllDefaultsAndPossible.py  makeTracksFile.py  plotTracks.py  readBed.py  readGtf.py  tracksClass.py  updateChromMapping.py  updateChromMapping.sh  updateDOC.sh  updateREADME.sh  utilities.py
pygenometracks/tests/: generateAllOutput.sh  (+22 more)
(+317 files in other folders)
